--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
                     src="assets/asset.glb"
                 ></a-asset-item>
             </a-assets>
+            <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
+                    position="0 1 0"
+                ></a-entity>
 
                 <a-entity
                     look-at="[gps-camera]"
