--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
              vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
         >
-            <a-assets>
+             <a-assets>
+      <!-- Replace with your image URL -->
+      <img id="my-image" src="https://first-free-bucket-hnpanchal.s3.amazonaws.com/HD-wallpaper-allu-arjun-ala-vaikunthapuramlo.jpg" />
+    </a-assets>
+
+    <!-- Image displayed in AR -->
+    <a-image src="#my-image" position="0 0 -10" 
+      scale="0.5 0.5 0.5"
+      ></a-image>
+<!--             <a-assets>
                 <a-asset-item
                     id="animated-asset"
                     src="assets/asset.glb"
@@ -122,7 +131,7 @@
                     gltf-model="#animated-asset"
                     scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
                     gps-entity-place="latitude: 23.02846669701858; longitude: 72.52941545779323;"
-                ></a-entity>
+                ></a-entity> -->
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
