--- a/index.html
+++ b/index.html
@@ -1,141 +1,34 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<!--         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script> -->
-        <!-- A-Frame itself -->
-<!-- <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script> -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Pure three.js code that the A-Frame components use for location-based AR -->
-<!-- <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script> -->
-
-<!-- AR.js A-Frame components -->
-<!-- <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script> -->
-         <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>A-Frame AR Image Example</title>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script>
-    </head>
+</head>
 
-    <body style="margin: 0; overflow: hidden;">
-        <a-scene
-            renderer="logarithmicDepthBuffer: true;"
-            embedded
-            loading-screen="enabled: false;"
-             vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
-        >
-             <a-assets>
+<body style="margin: 0; overflow: hidden;">
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" loading-screen="enabled: false;">
+    <a-assets>
       <!-- Replace with your image URL -->
       <img id="my-image" src="https://first-free-bucket-hnpanchal.s3.amazonaws.com/HD-wallpaper-allu-arjun-ala-vaikunthapuramlo.jpg" />
     </a-assets>
 
     <!-- Image displayed in AR -->
-    <a-image src="#my-image" position="0 0 0" 
-      scale="0.5 0.5 0.5"
+    <a-image src="#my-image" position="0 0 0" <!-- Position directly in front of the camera -->
+      scale="0.5 0.5 0.5" <!-- Scale the image -->
       ></a-image>
-<!--             <a-assets>
-                <a-asset-item
-                    id="animated-asset"
-                    src="assets/asset.glb"
-                ></a-asset-item>
-            </a-assets>
-            <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    position="0 1 0"
-                ></a-entity>
 
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028673378820525; longitude: 72.52875748470836;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028611314638443; longitude: 72.52886477304935;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.02857181923864; longitude: 72.52895060373126;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028465322648206; longitude: 72.52910617184226;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.02838421587912; longitude: 72.52922418902993;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028330614892823; longitude: 72.52929929089214;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028298877445796; longitude: 72.52935293505281;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028281245491968; longitude: 72.5293743927233;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.028848286843722; longitude: 72.5285697300802;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.02885392903114; longitude: 72.52855363682735;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.029019668287393; longitude: 72.52837661104589;"
-                ></a-entity>
-                <a-entity
-                    look-at="[gps-camera]"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    scale="1.4366076253966045 1.4366076253966045 1.4366076253966045"
-                    gps-entity-place="latitude: 23.02846669701858; longitude: 72.52941545779323;"
-                ></a-entity> -->
+    <!-- GPS Camera -->
+    <a-camera gps-camera rotation-reader></a-camera>
+  </a-scene>
+<app-root></app-root>
+</body>
 
-            <a-camera gps-camera rotation-reader></a-camera>
-        </a-scene>
-    </body>
 </html>
+
+</html>
+
+<!-- gps-entity-place="latitude: 23.0286781; longitude: 72.5295873" -->
