--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" loading-screen="enabled: false;">
     <a-assets>
-      <!-- Replace with your image URL -->
+
       <img id="my-image" src="https://first-free-bucket-hnpanchal.s3.amazonaws.com/HD-wallpaper-allu-arjun-ala-vaikunthapuramlo.jpg" />
     </a-assets>
 
-    <!-- Image displayed in AR -->
-    <a-image src="#my-image" position="0 0 0" <!-- Position directly in front of the camera -->
-      scale="0.5 0.5 0.5" <!-- Scale the image -->
-      ></a-image>
-
-    <!-- GPS Camera -->
+    <a-image src="#my-image" position="0 0 0" scale="0.5 0.5 0.5" ></a-image>
     <a-camera gps-camera rotation-reader></a-camera>
   </a-scene>
 <app-root></app-root>
