--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script>
 </head>
 
-<body style="margin: 0; overflow: hidden;">
+<body style="margin: 0; overflow: hidden; padding-top:100px">
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" loading-screen="enabled: false;">
     <a-assets>
 
