--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A-Frame AR Image Example</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script>
+<!--   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> -->
+<!--   <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script> -->
+     <!-- A-Frame itself -->
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+
+<!-- Pure three.js code that the A-Frame components use for location-based AR -->
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+
+<!-- AR.js A-Frame components -->
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 </head>
 
 <body style="margin: 0; overflow: hidden; padding-top:100px">
