--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 </head>
 
 <body style="margin: 0; overflow: hidden; padding-top:100px">
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" loading-screen="enabled: false;">
+  <a-scene  renderer="logarithmicDepthBuffer: true;"
+            embedded
+            loading-screen="enabled: false;"
+             vr-mode-ui="enabled: false"
+      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
     <a-assets>
 
       <img id="my-image" src="https://first-free-bucket-hnpanchal.s3.amazonaws.com/HD-wallpaper-allu-arjun-ala-vaikunthapuramlo.jpg" />
