--- a/index.html
+++ b/index.html
@@ -1,41 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A-Frame AR Image Example</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://aframe.io/releases/1.2.0/aframe-ar.js"></script>
-     <!-- A-Frame itself -->
-<!-- <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script> -->
-
-<!-- Pure three.js code that the A-Frame components use for location-based AR -->
-<!-- <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script> -->
-
-<!-- AR.js A-Frame components -->
-<!-- <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script> -->
-</head>
-
-<body style="margin: 0; overflow: hidden; padding-top:100px">
-  <a-scene  renderer="logarithmicDepthBuffer: true;"
-            embedded
-            loading-screen="enabled: false;"
-             vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
-    <a-assets>
-
-      <img id="my-image" src="https://first-free-bucket-hnpanchal.s3.amazonaws.com/HD-wallpaper-allu-arjun-ala-vaikunthapuramlo.jpg" />
-    </a-assets>
-
-    <a-image src="#my-image" position="0 0 0" scale="0.5 0.5 0.5" ></a-image>
-    <a-camera gps-camera rotation-reader></a-camera>
-  </a-scene>
-<app-root></app-root>
-</body>
-
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#000000"></a-sky>
+    </a-scene>
+  </body>
 </html>
-
-</html>
-
-<!-- gps-entity-place="latitude: 23.0286781; longitude: 72.5295873" -->
