--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>AR.js A-Frame Location-based</title>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AR Portal Door with Plane Detection</title>
+  <!-- A-Frame and Extras -->
+  <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/aframevr/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
+  <script>
+    AFRAME.registerComponent('hit-test', {
+      init: function () {
+        const sceneEl = this.el;
+        let portalDoor = document.getElementById("portal-door");
+
+        sceneEl.addEventListener('click', (event) => {
+          if (event.detail.intersection) {
+            let intersectedPoint = event.detail.intersection.point;
+            portalDoor.setAttribute('position', intersectedPoint);
+            portalDoor.setAttribute('visible', true);
+            portalDoor.setAttribute('scale', '1 1 1');
+          }
+        });
+      }
+    });
+  </script>
 </head>
-<body>
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-    <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-    <a-entity material='color: red' geometry='primitive: box' position="0 0 0" scale="10 10 10"></a-entity>
-</a-scene>
+
+<body style="margin: 0; overflow: hidden;">
+  <a-scene vr-mode-ui="enabled: false" renderer="antialias: true" xrweb="optionalFeatures: hit-test, local-floor"
+    webxr="optionalFeatures: hit-test, local-floor; requiredFeatures: hit-test">
+
+    <!-- Portal Door Model -->
+    <a-entity id="portal-door" gltf-model="url(https://first-free-bucket-hnpanchal.s3.amazonaws.com/model.glb)" scale="0 0 0" visible="false"></a-entity>
+
+    <!-- 3D Environment Inside the Door -->
+    <!-- <a-sky src="assets/spruit_sunrise_1k_HDR.jpg" radius="10"></a-sky> -->
+
+    <!-- Camera for AR with WebXR Hit Test -->
+    <a-camera hit-test></a-camera>
+  </a-scene>
+  <app-root></app-root>
 </body>
+
+</html>
+
