--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>AR Portal Door with Plane Detection</title>
   <!-- A-Frame and Extras -->
   <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/aframevr/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
   <script>
     AFRAME.registerComponent('hit-test', {
       init: function () {
