--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- <a-sky src="assets/spruit_sunrise_1k_HDR.jpg" radius="10"></a-sky> -->
 
     <!-- Camera for AR with WebXR Hit Test -->
-    <a-camera hit-test></a-camera>
+    <a-camera ></a-camera>
   </a-scene>
   <app-root></app-root>
 </body>
