--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
  <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
   <script>
-    AFRAME.registerComponent('hit-test', {
-      init: function () {
-        const sceneEl = this.el;
-        let portalDoor = document.getElementById("portal-door");
+    // AFRAME.registerComponent('hit-test', {
+    //   init: function () {
+    //     const sceneEl = this.el;
+    //     let portalDoor = document.getElementById("portal-door");
 
-        sceneEl.addEventListener('click', (event) => {
-          if (event.detail.intersection) {
-            let intersectedPoint = event.detail.intersection.point;
-            portalDoor.setAttribute('position', intersectedPoint);
-            portalDoor.setAttribute('visible', true);
-            portalDoor.setAttribute('scale', '1 1 1');
-          }
-        });
-      }
-    });
+    //     sceneEl.addEventListener('click', (event) => {
+    //       if (event.detail.intersection) {
+    //         let intersectedPoint = event.detail.intersection.point;
+    //         portalDoor.setAttribute('position', intersectedPoint);
+    //         portalDoor.setAttribute('visible', true);
+    //         portalDoor.setAttribute('scale', '1 1 1');
+    //       }
+    //     });
+    //   }
+    // });
   </script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-  <a-entity id="rig" position="25 10 0">
-  <a-camera id="camera"></a-camera>
-</a-entity>
+ <a-scene>
+  <a-box></a-box>
+  <a-camera></a-camera>
+</a-scene>
   <app-root></app-root>
 </body>
 
