--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body style="margin: 0; overflow: hidden;">
  <a-scene>
   <a-box></a-box>
-  <a-camera></a-camera>
+  <a-entity camera look-controls position="0 1.6 0"></a-entity>
 </a-scene>
   <app-root></app-root>
 </body>
