--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
- <a-scene>
-  <a-box></a-box>
-  <a-entity camera look-controls position="0 1.6 0"></a-entity>
+<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+    <a-camera ></a-camera>
+<!--     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.02890470866964; longitude: 72.5296803563716;" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0357837; longitude: 72.5488921;" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0360459; longitude: 72.5487928;" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0363423; longitude: 72.5488216;" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0365228; longitude: 72.5488295;" scale="10 10 10"></a-entity>
+    <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0369368; longitude: 72.5488719;" scale="10 10 10"></a-entity>
+   <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0373334; longitude: 72.5488661;" scale="10 10 10"></a-entity>
+   <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0383854; longitude: 72.5489037;" scale="10 10 10"></a-entity> -->
+    <a-light type="directional" position="0 10 0" intensity="0.8" castShadow="true"></a-light>
+    <a-light type="ambient" intensity="0.5"></a-light>
 </a-scene>
   <app-root></app-root>
 </body>
