--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 </head>
   <script>
-    AFRAME.registerComponent('hit-test', {
-      init: function () {
-        const sceneEl = this.el;
-        let portalDoor = document.getElementById("portalDoor");
+    // AFRAME.registerComponent('hit-test', {
+    //   init: function () {
+    //     const sceneEl = this.el;
+    //     let portalDoor = document.getElementById("portalDoor");
 
-        sceneEl.addEventListener('click', (event) => {
-          if (event.detail.intersection) {
-            let intersectedPoint = event.detail.intersection.point;
-            portalDoor.setAttribute('position', intersectedPoint);
-            portalDoor.setAttribute('visible', true);
-            portalDoor.setAttribute('scale', '1 1 1');
-          }
-        });
-      }
-    });
+    //     sceneEl.addEventListener('click', (event) => {
+    //       if (event.detail.intersection) {
+    //         let intersectedPoint = event.detail.intersection.point;
+    //         portalDoor.setAttribute('position', intersectedPoint);
+    //         portalDoor.setAttribute('visible', true);
+    //         portalDoor.setAttribute('scale', '1 1 1');
+    //       }
+    //     });
+    //   }
+    // });
   </script>
 </head>
 
@@ -37,7 +37,7 @@
   xrweb="optionalFeatures: hit-test, local-floor"
     webxr="optionalFeatures: hit-test, local-floor; requiredFeatures: hit-test">
     <a-camera hit-test></a-camera>
-  <a-entity id="portalDoor" gltf-model="url(https://first-free-bucket-hnpanchal.s3.amazonaws.com/model.glb)" scale="0 0 0" visible="false"></a-entity>
+  <a-entity id="portalDoor" gltf-model="url(https://first-free-bucket-hnpanchal.s3.amazonaws.com/model.glb)" scale="1 1 1" visible="true"></a-entity>
 <!--     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.02890470866964; longitude: 72.5296803563716;" scale="10 10 10"></a-entity>
     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0357837; longitude: 72.5488921;" scale="10 10 10"></a-entity>
     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 23.0360459; longitude: 72.5487928;" scale="10 10 10"></a-entity>
