--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 </head>
   <script>
-    // AFRAME.registerComponent('hit-test', {
-    //   init: function () {
-    //     const sceneEl = this.el;
-    //     let portalDoor = document.getElementById("portalDoor");
+    AFRAME.registerComponent('hit-test', {
+      init: function () {
+        const sceneEl = this.el;
+        let portalDoor = document.getElementById("portalDoor");
 
-    //     sceneEl.addEventListener('click', (event) => {
-    //       if (event.detail.intersection) {
-    //         let intersectedPoint = event.detail.intersection.point;
-    //         portalDoor.setAttribute('position', intersectedPoint);
-    //         portalDoor.setAttribute('visible', true);
-    //         portalDoor.setAttribute('scale', '1 1 1');
-    //       }
-    //     });
-    //   }
-    // });
+        sceneEl.addEventListener('click', (event) => {
+          alert('clicked')
+          if (event.detail.intersection) {
+            let intersectedPoint = event.detail.intersection.point;
+            portalDoor.setAttribute('position', intersectedPoint);
+            portalDoor.setAttribute('visible', true);
+            portalDoor.setAttribute('scale', '1 1 1');
+          }
+        });
+      }
+    });
   </script>
 </head>
 
