--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <!--   <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script> -->
 <!--   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script> -->
  <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+<!--   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 </head>
