--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
   <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.min.js"></script>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
-  <script type='text/javascript'
-    src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+  <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
   <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 
   <script>
@@ -78,13 +77,20 @@
       init: function () {
         const portalDoor = document.getElementById("portal-door");
 
+        // Set the door's initial visibility to false
+        portalDoor.setAttribute('visible', false);
+
+        // This event will trigger when the cursor intersects with an object
         this.el.addEventListener('click', (event) => {
-          alert('clicked')
-          if (event.detail.intersection) {
-            let intersectedPoint = event.detail.intersection.point;
+          const intersection = event.detail.intersection;
+
+          // Check if there is a valid intersection
+          if (intersection) {
+            const intersectedPoint = intersection.point;
+            // Set the position of the portal door and make it visible
             portalDoor.setAttribute('position', intersectedPoint);
             portalDoor.setAttribute('visible', true);
-            portalDoor.setAttribute('scale', '1 1 1');
+            portalDoor.setAttribute('scale', '1 1 1'); // Scale to original size
           }
         });
       }
@@ -97,13 +103,17 @@
     webxr="optionalFeatures: hit-test, local-floor; requiredFeatures: hit-test">
 
     <!-- Portal Door Model -->
-    <a-entity id="portal-door" gltf-model="url(https://first-free-bucket-hnpanchal.s3.amazonaws.com/model.glb)"
-      scale="0 0 0" visible="false"></a-entity>
+    <a-entity id="portal-door" gltf-model="url(https://first-free-bucket-hnpanchal.s3.amazonaws.com/model.glb)" scale="0 0 0" visible="false"></a-entity>
 
     <!-- Camera for AR with WebXR Hit Test -->
     <a-camera hit-test>
       <!-- Cursor for clicking -->
-      <a-cursor color="yellow" fuse="true" fuse-timeout="1000" position="0 0 -1">
+      <a-cursor
+        id="cursor"
+        color="yellow"
+        fuse="true"
+        fuse-timeout="1000"
+        position="0 0 -1">
       </a-cursor>
     </a-camera>
   </a-scene>
@@ -111,4 +121,5 @@
 </body>
 
 </html>
+
 
